--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "dashboard_mobile.html", "use": "@vercel/static" }
+    { "src": "api/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/dashboard_mobile.html", "dest": "/dashboard_mobile.html" },
-    { "src": "/(.*)", "dest": "/api/index.js" }
+    { "src": "/api/(.*)", "dest": "/api/index.js" }
   ]
 }
