--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,11 @@
   "version": 2,
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "*.html", "use": "@vercel/static" }
+    { "src": "dashboard_mobile.html", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/dashboard_mobile", "dest": "/dashboard_mobile.html" },
+    { "src": "/", "dest": "/dashboard_mobile.html" }
   ]
 }
