--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,12 @@
   "version": 2,
   "builds": [
     { "src": "api/index.js", "use": "@vercel/node" },
-    { "src": "dashboard_mobile.html", "use": "@vercel/static" }
+    { "src": "*.html", "use": "@vercel/static" },
+    { "src": "style.css", "use": "@vercel/static" },
+    { "src": "script.js", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/index.js" },
-    { "src": "/dashboard_mobile", "dest": "/dashboard_mobile.html" },
-    { "src": "/", "dest": "/dashboard_mobile.html" }
+    { "src": "/(.*)", "dest": "/dashboard.html" }
   ]
 }
